Fix card overlapping

--- a/client/styles/Main.scss
+++ b/client/styles/Main.scss
@@ -52,6 +52,10 @@ html, body, h1, h2, h3, h4, h5, p, .mdl-button--raised{
   margin-left: 10px;
   color: teal;
 }
+.btn-genre{
+  background-color: teal;
+  color: white;
+}
 table {
   width: 100%
 }
